--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,27 @@ body{
  background: #f2f2f2; 
  font-family: 'Roboto', sans-serif;
 }
+
+header .nav{
+  min-height: 80px;
+  overflow: hidden;
+  background: #363636;
+}
+
+header .logo h2,
+header .logo p{
+  font-size: 16px;
+  display: inline-block;
+}
+
+header .logo .icono img{
+  max-height: 64px;
+}
+
+header .menu .c1{ background: #0077B6; }
+header .menu .c2{ background: #023E8A; }
+header .menu .c3{ background: #03045E; }
+
+header .menu .c1:hover{ background: #00B4D8; }
+header .menu .c2:hover{ background: #00B4D8; }
+header .menu .c3:hover{ background: #00B4D8; }
