--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,41 @@ header .menu .c3:hover{ background: #00B4D8; }
 .portfolio .gallery .container-img:hover img{
   opacity: 0.5;
 }
+
+@media screen and (max-width: 768px){
+
+}
+  
+@media screen and (max-width: 992px){
+  .logo{
+    height: 76px;
+  }
+  header .menu{
+    min-height: 76px;
+  }
+  header .menu a{
+    width: 100%;
+  }
+
+  .portfolio .gallery .container-img:nth-child(1){
+    order: 1;
+  }
+  .portfolio .gallery .container-img:nth-child(2){
+    order: 3;
+  }
+  .portfolio .gallery .container-img:nth-child(3){
+    order: 6;
+  }
+  .portfolio .gallery .container-img:nth-child(4){
+    order: 2;
+  }
+  .portfolio .gallery .container-img:nth-child(5){
+    order: 5;
+  }
+  .portfolio .gallery .container-img:nth-child(6){
+    order: 4;
+  }
+  .portfolio .gallery .container-img:nth-child(7){
+    order: 7;
+  }
+}
